[package]
name = "peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.23.0",features = ["macros","rt-multi-thread","net","io-util","time"]}
tun = { version = "0.6.1", features = ["async"] }
packet = "0.1.4"
futures = "0.3.25"
tokio-util = {version = "0.7.4",features=["codec"]}
chrono = "0.4.30"
config-file = "0.2.3"
serde = {version = "1.0.188",features = ["serde_derive"]}
md5 = "0.7.0"
futures-util = { version = "0.3" }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
