[package]
name = "tunnel-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.55.5", features = ["jwt-auth","serve-static","cors"] }
tokio = { version = "1", features = ["macros"] }
config-file = "0.2.3"
serde = "1.0.163"
tracing-subscriber = { version = "0.3.17", features = [
	"env-filter",
	"time",
	"local-time",
] }
tracing-appender = "0.2.2"
tracing = "0.1.37"
time = { version = "0.3.21", features = ["macros"] }
chrono = "0.4.26"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "macros"] }
openssl = { version = "*", features = ["vendored"] }
anyhow = "1.0.71"
serde_json = "1.0.96"
jsonwebtoken = "8.0"
md5 = "0.7.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[features]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
http3 = ["salvo/quinn"]
